# rory

./: .env  .gitignore  LICENSE.txt  README.md  api_client.md  build_all.sh  build_and_push_all.sh  clients.yml  docker-compose.yml  install_all.sh  push_all.sh  restart.sh  rory_elastic_server.yml  rory_parallel.yml  rory_parallel_server.yml  test.yml  zensical.toml
client/: .client.env  .env  .env.dev  Dockerfile  Dockerfile.backup  build.sh  client.yml  deploy.sh  docker-compose.yml  local_use.sh  requirements.txt  run.sh
client/src/: .env  gunicorn_config.py  main.py  processtrace.py  run.sh
client/test/: test_client.py  test_utils.py
dataowner/: .env-dbskmeans  .env-dbsnnc  .env-kmeans  .env-nnc  .env-skmeans  .env-sknn  .gitignore  Dockerfile  build.sh  dataowner-elastic-server.yml  docker-compose-server.yml  docker-compose.yml  requirements.txt  trace.csv
docs/: api-reference.md  client.md  deployment.md  index.md  manager.md  overview.md  worker.md
manager/: .env.dev  .gitignore  Dockerfile  build.sh  requirements.txt  run.sh
mictlanx/: clean.sh  docker-compose.yml  init_peers.sh  main.py  mictlanx.rar  mictlanx.yml  peers.json  pull_all.sh  router-static.yml  router.yml  run.sh
rory-env/: pyvenv.cfg
rory_client/: pyproject.toml  requirements.txt
rorycommon/: pyproject.toml
rorycommon/src/rorycommon/: __init__.py
rorycommon/tests/: test_put_get_matrix.py  test_segment_encrypt.py
scripts/: declarations.py  experiments.py  routines.py
worker/: .env  .env.dev  Dockerfile  Dockerfile_deprecated  build.sh  requirements.txt  run.sh
(+73 files in other folders)
